--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
+    "pug": "^3.0.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
